--- a/work-data/pom.xml
+++ b/work-data/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>work-data</artifactId>
     <version>1.0.0</version>
+    <packaging>pom</packaging>
+
     <modules>
         <!-- CAS java 锁 -->
         <module>data-cas</module>
