--- a/work-data/data-api/pom.xml
+++ b/work-data/data-api/pom.xml
@@ -13,6 +13,7 @@
     <version>1.0.0</version>
     <name>data-api</name>
     <description>Demo project for Spring Boot</description>
+    <packaging>jar</packaging>
 
     <properties>
         <java.version>1.8</java.version>
